samples/_failures_safe/1761350133_a36511_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e611c17.c: In function ‘main’:
./samples/SAFE/__tmp_3e611c17.c:150:5: error: expected declaration or statement at end of input
  150 |     print_matrix(&mat1);
      |     ^~~~~~~~~~~~
